@@ -13,6 +13,7 @@ namespace dolfin
 {
 
   class Mesh;
+  class BoundaryMesh;
   class Function;
 
   /// This class provides functionality useful for implementation of
@@ -25,7 +26,10 @@ namespace dolfin
   public:
 
     /// Move coordinates of mesh according to new boundary coordinates
-    static void move(Mesh& mesh, Mesh& new_boundary, ALEType type=hermite);
+    static void move(Mesh& mesh, BoundaryMesh& new_boundary, dolfin::ALEType method=lagrange);
+    
+    /// Move coordinates of mesh0 according to mesh1 with common global vertices
+    static void move(Mesh& mesh0, Mesh& mesh1, dolfin::ALEType method=lagrange);
 
     /// Move coordinates of mesh according to displacement function
     static void move(Mesh& mesh, const Function& displacement);
